# llm_basic

./: .gitignore  CLAUDE.md  PLAN.md  SETUP.md  pyproject.toml
src/: 01_data_preparation.py  02_tokenizer.py  03_model.py  04_train.py  05_inference.py  check_pytorch.py  config.py
