[project]
name = "llm-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.uv]
index-strategy = "unsafe-best-match"
